--- a/FrontEnd/View.html
+++ b/FrontEnd/View.html
@@ -21,7 +21,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="./assets/stylesheet/customCss.css"
+      href=".././assets/stylesheet/customCss.css"
     />
 
     <!-- SweetAlert-->
@@ -35,10 +35,10 @@
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
 
     <!-- Configration -->
-    <script src="./config.js"></script>
+    <script src="../../config.js"></script>
 
     <!-- Parameter Extractor -->
-    <script src="./assets/js/getParams.js"></script>
+    <script src="../../assets/js/getParams.js"></script>
   </head>
 
   <body class="h-screen w-screen bg-neutral-200 overflow-hidden">
